# life-tracker

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/_components/dashboard/: accounts-card.tsx  dashboard.tsx  data.ts  goals-card.tsx  habit-week-card.tsx  page-header.tsx  progress-bar.tsx  recent-activity-card.tsx  sidebar.tsx  stat-card.tsx  today-card.tsx
app/accounts/: page.tsx
app/actions/: accounts.ts  budget.ts  categories.ts  daily-log.ts  dashboard.ts  goals.ts  habits.ts  insights.ts  user-data.ts
app/budget/: page.tsx
app/components/accounts/: accounts-table.tsx
app/components/budget/: budget-table.tsx
app/components/categories/: categories-table.tsx
app/goals/: page.tsx
app/habits/: page.tsx
app/insights/: page.tsx
app/settings/: page.tsx
design-system/life-tracker/: MASTER.md
desktop-loading/: index.html
lib/: constants.ts  daily-log-references.ts  daily-quotes.ts  dashboard-activity.ts  habit-streak.ts  money.ts  prisma.ts  sqlite-migrations.ts  user-data-import-schema.ts  utc-date.ts  wealth-balances.ts
prisma/: schema.prisma
scripts/: prepare-tauri-build.cjs  seed-dummy-data.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: account-cascade.test.ts  daily-log-references.test.ts  dashboard-activity.test.ts  habit-streak.test.ts  money.test.ts  sqlite-migrations.test.ts  ts-extension-loader.mjs  utc-date.test.ts  wealth-balances.test.ts
types/: better-sqlite3.d.ts
(+30 files in other folders)
